tests/machine/x/fs/closure.fs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T16:26:27Z
open System

let makeAdder (n) =
    fun x -> x + n
let add10: obj = makeAdder 10
printfn "%A" (add10 7)
